Wed Sep 19 04:10:15 CDT 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

	* CIAO version 0.6.1 released.

Tue Sep 18 15:13:37 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * DAnCE/NodeApplication/NodeApp_Configurator.cpp:

          StaticDAnCE applications stopped working since the introduction
          of this file. This change fixes the problem. For details look
          into Bugzilla 3073. Thanks to William R. Otte for providing 
          the patch.

Fri Sep 14 15:19:17 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * DAnCE/ExecutionManager/Execution_Manager.cpp:

          Fixed a couple of spelling errors to user diplayed messages.

Fri Sep 14 14:42:06 UTC 2007  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * docs/schema/CIAOEvents.txt:
          Added information about supported federation types.

Wed Sep 12 22:18:03 UTC 2007  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * docs/schema/CIAOEvents.txt:
          Added documentation about how to integrat TAO Real-Time Event Service
          into an CIAO based deployment.

Tue Sep  4 14:25:24 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * performance-tests/Benchmark/RoundTripClient/RoundTripClient_exec.cpp:
        * performance-tests/Benchmark/RoundTripClient/client.cpp:
          Untabify.

Mon Sep 03 02:50:30 CDT 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 0.6 released.

Mon Aug 27 23:04:36 UTC 2007  Nilabja R  <nilabjar@dre.vanderbilt.edu>

        * ciao/Servant_Impl_Base.h:
          Deleted the Private Constructor in the class Servant_Impl_Base.
          This strangely solves the problem on Bug 3060.

Mon Aug 27 13:21:14 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tools/Config_Handlers/ADD_Handler.cpp:
        * tools/Config_Handlers/Any_Handler.h:
        * tools/Config_Handlers/CCD_Handler.cpp:
        * tools/Config_Handlers/CEPE_Handler.h: