@@ -158,7 +158,7 @@ namespace CIAO
 
       // Generate a UUID to use for the IDREF.
       ACE_Utils::UUID uuid;
-      ACE_Utils::UUID_GENERATOR::instance ()->generateUUID (uuid);
+      ACE_Utils::UUID_GENERATOR::instance ()->generate_UUID (uuid);
       ACE_CString mdd_id ("_");
       mdd_id += *uuid.to_string ();
 
