@@ -1,3 +1,12 @@
+Mon Sep  3 14:49:07 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * tools/Config_Handlers/IDD_Handler.cpp (CIAO): 
+        * tools/Config_Handlers/IDD_Handler.cpp (CIAO): 
+        * tools/Config_Handlers/ADD_Handler.cpp (CIAO): 
+        * tools/Config_Handlers/MDD_Handler.cpp (CIAO): Changed
+          generateUUID() to generate_UUID() to match new ACE-ification of
+          the UUDI class.
+  
 Wed Sep 19 04:10:15 CDT 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* CIAO version 0.6.1 released.
